# KFFL-Flower

./: .gitignore  README.md  pyproject.toml
src/kffl/: __init__.py
src/kffl/app/: __init__.py  client_app.py  message_types.py  server_app.py
src/kffl/data/: __init__.py  adult.py  dataset.py  provider.py  toy.py
src/kffl/fairness/: __init__.py  kernel.py  local_terms.py  orf.py
src/kffl/ml/: __init__.py  base.py  factory.py  logistic.py  model.py  task.py
src/kffl/utils/: __init__.py  serde.py
tests/: test_adult_loader.py  test_data.py  test_fair1.py  test_fair2.py  test_local_update.py  test_messaging.py  test_ml.py
