[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kffl"
version = "0.1.0"
description = "Kernel Fair Federated Learning (KFFL) via Stochastic Kernel Regularization"
requires-python = ">=3.10"
dependencies = [
    "flwr>=1.12.0",
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "ucimlrepo>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kffl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ---------------------------------------------------------------------------
# Flower federation configuration
# ---------------------------------------------------------------------------

[tool.flwr.app]
publisher = "kffl"

[tool.flwr.app.components]
serverapp = "kffl.app.server_app:app"
clientapp = "kffl.app.client_app:app"

[tool.flwr.app.config]
# Number of full KFFL iterations (each iteration = 3 message rounds)
num-server-rounds = 10
# Dimension of the random feature maps (D)
num-random-features = 64
# Step size for the proximal gradient update
step-size = 0.05
# Fairness regularization weight
lambda = 2000.0
# RBF kernel bandwidth for sensitive-attribute ORF
gamma-s = 1.0
# RBF kernel bandwidth for model-prediction ORF
gamma-f = 1.0
# Dataset to federate (must be a key in kffl.data._DATASET_REGISTRY)
dataset = "no_sensitive"
# Comma-separated sensitive attribute column names (default: dataset-specific, e.g. "sex,race")
sensitive-features = "group"
# Model architecture (must be a key in kffl.ml._MODEL_REGISTRY)
model = "logistic"
# Number of output classes for the model
num-classes = 2
# Number of federated clients / data partitions (must match num-supernodes)
num-partitions = 3
# Batch size for local DataLoaders
batch-size = 64
# Proximal step-size α for local update: L = f_i(ω) + (1/2α)||ω − ω_{t+1/2}||²
proximal-alpha = 2 
# Number of local Adam epochs per KFFL round
num-local-epochs = 5

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
